/**
 * Copyright (c) F5, Inc.
 *
 * This source code is licensed under the Apache License, Version 2.0 license found in the
 * LICENSE file in the root directory of this source tree.
 */

syntax = "proto3";
package f5.nginx.agent.internal.model.instances;

option go_package = "github.com/nginx/agent/v3/api/grpc/instances";

message Instance {
    string instance_id = 1;
	Meta meta = 2;
	Type type = 3;
	string version = 4;
}

message Meta {
    oneof meta {
        NginxMeta nginx_meta = 1;
    }
}
message NginxMeta {
    string config_path = 3;
}

enum Type {
    UNKNOWN = 0;
    NGINX = 1;
    NGINX_PLUS = 2;
    NGINX_GATEWAY_FABRIC = 3;
}
